# rust-aidl-parser

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: main.yml
src/: aidl.lalrpop  ast.rs  diagnostic.rs  error.rs  javadoc.rs  lib.rs  parser.rs  parser_old.rs  rules.rs  symbol.rs  traverse.rs  types.rs  utils.rs  validation.rs
src/snapshots/: aidl_parser__ast__tests__annotation-4.snap  aidl_parser__ast__tests__annotation-5.snap  aidl_parser__ast__tests__annotation.snap  aidl_parser__ast__tests__annotation3.snap  aidl_parser__ast__tests__const_num.snap  aidl_parser__ast__tests__const_string.snap  aidl_parser__ast__tests__const_with_annotation.snap  aidl_parser__ast__tests__const_with_javadoc.snap  aidl_parser__ast__tests__enum.snap  aidl_parser__ast__tests__enum_fallback.snap  aidl_parser__ast__tests__enum_with_errors.snap  aidl_parser__ast__tests__enum_with_trailing_comma.snap  aidl_parser__ast__tests__file.snap  aidl_parser__ast__tests__import.snap  aidl_parser__ast__tests__interface.snap  aidl_parser__ast__tests__interface_fallback.snap  aidl_parser__ast__tests__interface_with_annotation.snap  aidl_parser__ast__tests__interface_with_errors.snap  aidl_parser__ast__tests__member.snap  aidl_parser__ast__tests__member_with_annotation.snap  aidl_parser__ast__tests__member_with_javadoc.snap  aidl_parser__ast__tests__member_with_value.snap  aidl_parser__ast__tests__method_arg_with_annotations.snap  aidl_parser__ast__tests__method_arg_with_direction.snap  aidl_parser__ast__tests__method_arg_with_direction_and_name.snap  aidl_parser__ast__tests__method_arg_with_name.snap  aidl_parser__ast__tests__method_oneway.snap  aidl_parser__ast__tests__method_with_1_arg.snap  aidl_parser__ast__tests__method_with_3_args.snap  aidl_parser__ast__tests__method_with_annotation.snap  aidl_parser__ast__tests__method_with_javadoc.snap  aidl_parser__ast__tests__method_with_value.snap  aidl_parser__ast__tests__method_without_arg.snap  aidl_parser__ast__tests__package-2.snap  aidl_parser__ast__tests__package.snap  aidl_parser__ast__tests__package1.snap  aidl_parser__ast__tests__package2.snap  aidl_parser__ast__tests__parcelable.snap  aidl_parser__ast__tests__parcelable_fallback.snap  aidl_parser__ast__tests__parcelable_with_errors.snap  (+181 more)
tests/: test.rs
tests/snapshots/: test__parse-2.snap  test__parse.snap
