[package]
name = "aidl-parser"
version = "0.8.0"
authors = ["Benoit Walter <b.walter@meerun.de>"]
license = "MIT"
edition = "2021"
description = "Parse AIDL files, crate AST and diagnostics"
repository = "https://github.com/bwalter/rust-aidl-parser"
build = "src/build.rs"

[dependencies]
anyhow = "1.0"
lalrpop-util = { version = "0.19", features = ["lexer"] }
line-col = { version = "0.2", features = ["grapheme-clusters"] }
regex = "1.5"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
lalrpop = "0.19"
lalrpop-util = { version = "0.19", features = ["lexer"] }

[dev-dependencies]
insta = { version = "1.8", features = ["redactions", "ron"] }

